--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         <h1>Encabezado Principal</h1>
         <nav>
+            <i class="fi fi-rr-menu-burger"></i>
             <ul>
                 <li><a href="#home">Inicio</a></li>
                 <li><a href="#about">Acerca de</a></li>
