--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </main>
     
     <footer>
+        <p>todos los derechos reservados por github copilot y yo</p>
     </footer>
 
     <script src="script.js"></script>
